# ARCHIS

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md
kernel/: Cargo.toml  build.rs
kernel/.cargo/: config.toml
kernel/config/x86_64/: driver_linker.ld  linker.ld  x86_64.json
kernel/src/: cpu.rs  error.rs  infra.rs  kern.rs  lock.rs  main.rs  module.rs  utils.rs
kernel/src/acpica/: mod.rs  osl.rs  table.rs  types.rs
kernel/src/acpica/acpica_c/include/: acarchis.h  acpiosxf.h  acutils.h
kernel/src/cpu/: cpu.rs  interrupts.rs  mod.rs
kernel/src/devices/: mod.rs
kernel/src/devices/x86_64/: hpet.rs  ioapic.rs  mod.rs  rtc.rs  uart.rs
kernel/src/drivers/test1/: Cargo.toml  driver.conf
kernel/src/drivers/test1/src/: lib.rs
kernel/src/drivers/test2/: Cargo.toml  driver.conf
kernel/src/drivers/test2_exports/: Cargo.toml
kernel/src/ds/: list.rs  mod.rs  queue.rs
kernel/src/fs/: file.rs
kernel/src/hal/: mod.rs
kernel/src/hal/x64/: mod.rs
kernel/src/hal/x86_64/: cpu.rs  cpu_regs.rs  features.rs  handlers.rs  lapic.rs  mod.rs  page_mapper.rs  smp.rs  syscall.rs  tables.rs  timer.rs  utils.rs
kernel/src/loader/: loader.rs  mod.rs  module.rs
kernel/src/logger/: framebuffer_logger.rs  mod.rs  serial_logger.rs
kernel/src/mem/: fixed_allocator.rs  frame_allocator.rs  heap_allocator.rs  mod.rs  physical_allocator.rs  pool_allocator.rs  virtual_allocator.rs
kernel/src/sched/: mod.rs  proc.rs  scheduler.rs  timer.rs  user.rs
kernel/src/sync/: lock.rs  mod.rs  once.rs  semaphore.rs
kernel/src/tests/: mod.rs
scripts/: Dockerfile  (+3 more)
(+108 files in other folders)
