[package]
name = "aris"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
path = "src/kern.rs"
crate-type = ["cdylib"]

[features]
default = []
stack_down = []
acpi = ["acpica/acpi"]

[dependencies]
common.workspace = true
rustc-demangle = "*"
acpica = {path = "../lib/acpica"}
kernel_intf = {path = "../lib/kernel_intf"}

# Used for testing
[dev-dependencies]
tests = {path = "../lib/tests"}
ctor = "*"
env_logger = "*"