[package]
name = "aris"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
path = "src/kern.rs"
crate-type = ["cdylib"]

[features]
default = []
stack_down = []
acpi = ["common/acpi"]
test-kernel = ["common/test-kernel"]

[dependencies]
common.workspace = true
rustc-demangle = "*"
kernel_intf = {path = "../lib/kernel_intf"}

# Used for testing
[dev-dependencies]
tests = {path = "../lib/tests"}
ctor = "*"
env_logger = "*"

[build-dependencies]
walkdir = "*"
